# docs/swagger.json
@@ -12,7 +12,7 @@
     "paths": {
         "/contract/new": {
             "post": {
-                "description": "新的合同信息",
+                "description": "上传新的合同",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,7 +22,7 @@
                 "tags": [
                     "合同相关"
                 ],
-                "summary": "新的合同信息",
+                "summary": "上传新的合同",
                 "parameters": [
                     {
                         "type": "string",
@@ -40,6 +40,39 @@
                             "type": "object",
                             "$ref": "#/definitions/model.ContractRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/oss/signture": {
+            "get": {
+                "description": "生成oss上传签名",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OSS"
+                ],
+                "summary": "生成oss上传签名",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
